--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "froglab - l'application pour fluidifier la communication en usine"
 meta_title: "froglab - l'application pour fluidifier la communication en usine"
 meta_description: "froglab permet simplement de donner de la voix aux techniciens afin de résoudre leurs problèmes du quotidien. Son autre avantage est de donner aux managers un meilleur contrôle sur la descente d'information."
-meta_image: "cover.png"
+meta_image: "og_image.png"
